2009-06-18  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::improve_virtual_call): Only print cast
	warnings when run with -XX:+SharkPerformanceWarnings.

2009-06-18  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkInvariants.hpp: New file.
	* ports/hotspot/src/share/vm/shark/sharkInvariants.cpp: Likewise.
	
	* ports/hotspot/src/share/vm/shark/sharkFunction.hpp
	(SharkFunction): Made a subclass of SharkTargetInvariants.
	(SharkFunction::SharkFunction): Updated constructor.
	(SharkFunction::_compiler): Removed.
	(SharkFunction::_flow): Likewise.
	(SharkFunction::_iter): Likewise.
	(SharkFunction::_thread): Likewise.
	(SharkFunction::_max_monitors): Likewise.
	(SharkFunction::compiler): Likewise.
	(SharkFunction::flow): Likewise.
	(SharkFunction::iter): Likewise.
	(SharkFunction::thread): Likewise.
	(SharkFunction::max_monitors): Likewise.
	(SharkFunction::builder): Likewise.
	(SharkFunction::arg_size): Likewise.
	(SharkFunction::debug_info): Likewise.
	(SharkFunction::env): Likewise.
	(SharkFunction::max_locals): Likewise.
	(SharkFunction::max_stack): Likewise.
	(SharkFunction::target): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkFunction.hpp
	(SharkFunction::initialize): Updated.

	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock): Made a subclass of SharkTargetInvariants.
	(SharkBlock::SharkBlock): Updated constructors.
	(SharkBlock::_builder): Removed.
	(SharkBlock::_target): Likewise.
	(SharkBlock::_thread): Likewise.
	(SharkBlock::builder): Likewise.
	(SharkBlock::target): Likewise.
	(SharkBlock::thread): Likewise.
	(SharkBlock::max_locals): Likewise.
	(SharkBlock::max_stack): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::initial_current_state): Use SharkState::copy.

	* ports/hotspot/src/share/vm/shark/sharkState.hpp
	(SharkState): Made a subclass of SharkTargetInvariants.